--- a/rg_bot/package.json
+++ b/rg_bot/package.json
@@ -21,6 +21,7 @@
 		"@discordjs/opus": "^0.9.0",
 		"@discordjs/voice": "^0.16.0",
 		"@spotify/web-api-ts-sdk": "^1.1.2",
+		"axios": "^1.5.1",
 		"debug": "^4.3.4",
 		"discord.js": "^14.13.0",
 		"dotenv": "^16.3.1",
