--- a/.github/workflows/rg_bot.yaml
+++ b/.github/workflows/rg_bot.yaml
@@ -6,6 +6,7 @@ on:
 
 env:
   REGISTRY_IMAGE: ${{secrets.DOCKER_USERNAME}}/rg_bot
+  CONTEXT: ./rg_bot
 
 jobs:
   build-rg-bot:
@@ -39,7 +40,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ${{ env.CONTEXT }}
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
