--- a/rg_bot/package.json
+++ b/rg_bot/package.json
@@ -26,9 +26,9 @@
 		"discord.js": "^14.13.0",
 		"dotenv": "^16.3.1",
 		"ffmpeg": "^0.0.4",
+		"libsodium-wrappers": "^0.7.13",
 		"magmastream": "^2.2.3",
 		"prism-media": "^1.3.5",
-		"sodium": "^3.0.2",
 		"vosk": "^0.3.39",
 		"ws": "^8.14.2"
 	}
